CHANGELOG
=========

3.6.1 (unreleased)
------------------
* [FEATURE] #4730 notification on file-upload for teacher

3.6.0 (2019-02-01)
------------------

* Moodle 3.6 compatible version
* [FIXED] #5951 remove strong-tags in labels due to flexbox not displaying spaces around them
* [FIXED] #6014 fix help icon related to column status being displayed the column before
* [FEATURE] #5835 context locking now affects publication too (some capabilities were defined as reading instead of writing)!
* [FEATURE] #5758 add new core_userlist_provider methods to privacy provider
* [FEATURE] #6025 privacy API updates (#5758) are now covered by unit tests
* [UPDATE] #5638 update .travis.yml
* [UPDATE] #5952 update accepted file types help text and label
* [UPDATE] #6029 update README.md
* [CHANGED] #5638 strip leading slashes from namespaces and use statements
* [CHANGED] #6025 reorganized unit tests


3.5.0 (2018-07-18)
------------------

* Moodle 3.5 compatible version
* [CHANGED] #5134 removed german lang file from repository
* [FEATURE] #5386 implemented privacy API


3.4.0 (2017-12-13)
------------------

* Moodle 3.4 compatible version
* [CHANGED] #4849 use moodleform's hideIf-Method instead of custom JS
* [CHANGED] #4621 prepend user's respectively group's name to onlinetext-file-downloads
* [CHANGED] #4851 reformatted many lines of code (PHPDoc comments, coding style, properties, variables, etc.)
* [CHANGED] added a label to filemanager for uploading files due to future behat tests using it


3.3.2 (2017-11-16)
------------------

* [FIXED] #4914 error caused for users without capability "mod/publication:upload" by not instantiated files table


3.3.1 (2017-09-04)
------------------

* [FIXED] #4675 integrated fix for granting extension causing fatal errors (thanks @raad https://github.com/raad)
* [FIXED] warning in "grant extension"-form due to no due date being used
* [FIXED] #4686 fixed template JSON not validating and template HTML as well as template coding style